# ml_coding_stats_practice

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
algorithms/: shallow_vs_deep_copy.py
data_structures/: __init__.py  arrays.py  linked_lists.py  node.py  shallow_vs_deep_copy.py  trees.py
deployment/: client.sh  sample_ml_training.py  server.py
ml/: __init__.py  gradient_descent.py  helpers.py
ml/classification/: __init__.py  kmeans.py  knn.py  logistic_regression.py
ml/deep_learning/: __init__.py  logistic_regression.py  xor.py
ml/regression/: __init__.py  linear_regression.py
tests/: test_data_structures.py  test_ml.py
